[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Telepad.gd" type="Script" id=1]
[ext_resource path="res://assets/interactive/blue_telepad.svg" type="Texture" id=2]
[ext_resource path="res://assets/audio/teleport.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=72]
extents = Vector2( 4, 4 )

[node name="TelepadBlue" type="Area2D"]
script = ExtResource( 1 )

[node name="TPSprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="TPCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 28 )
shape = SubResource( 72 )

[node name="TelepadAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -5.0
