[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/interactive/orange_telepad.svg" type="Texture" id=1]
[ext_resource path="res://scenes/Telepad.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=72]
extents = Vector2( 4, 4 )

[node name="TelepadOrange" type="Area2D"]
script = ExtResource( 2 )

[node name="TPSprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="TPCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 28 )
shape = SubResource( 72 )
